chore(api): create nestjs project and configure morgan and cors

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ dist/
 
 *.env
 *.env.local
-.env.local
+.dev.env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -18,3 +18,5 @@ yarn-debug.log*
 yarn-error.log*
 
 .cache/
+
+.vscode
